Fix sprites overlapping name text

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -121,12 +121,16 @@ z-index: 2;
 }
 
 #pk_profile_sprite {
-position: relative;
-top: -90px;
+position: absolute;
+    bottom: -30px;
+    margin: auto;
+    left: 0;
+    right: 0;
 }
 
 #pk_sprite_wrapper {
 height:215px;
+position: relative;
 }
 
 #pk_sprite_sphere_wrapper {
